--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_core: ^1.5.0
   firebase_auth: ^3.0.2
   firebase_database: ^7.2.0
+  fluttertoast: ^8.0.8
 
 dev_dependencies:
   flutter_test:
